force-app/main/default/objects/Post_Closing__c/Post_Closing__c.object-meta.xml
<CustomObject>
    <label>Post Closing</label>
    <nameField>
        <label>Post Closing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Post Closings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>