force-app/main/default/objects/Post_Closing__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Post Closings</relationshipLabel>
    <relationshipName>Post_Closings</relationshipName>
    <type>Lookup</type>
</CustomField>