force-app/main/default/objects/Post_Closing__c/fields/Num_of_Item_Requiring_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Item_Requiring_Follow_Up__c</fullName>
    <description>Total Number of Post Closing Items that require a follow up</description>
    <inlineHelpText>Total Number of Post Closing Items that require a follow up</inlineHelpText>
    <label># of Item Requiring Follow Up</label>
    <summarizedField>Post_Closing_Section__c.Num_of_Item_Requiring_Follow_Up__c</summarizedField>
    <summaryForeignKey>Post_Closing_Section__c.Post_Closing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>