force-app/main/default/objects/Post_Closing__c/fields/Num_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Items__c</fullName>
    <description>Total Number of Post Closing Items Required</description>
    <inlineHelpText>Total Number of Post Closing Items Required</inlineHelpText>
    <label># of Items</label>
    <summarizedField>Post_Closing_Section__c.Num_of_Items__c</summarizedField>
    <summaryForeignKey>Post_Closing_Section__c.Post_Closing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>