force-app/main/default/objects/Post_Closing__c/fields/Num_of_Items_Requiring_Revision__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Items_Requiring_Revision__c</fullName>
    <description>Total Number of Post Closing Items that require a Revision</description>
    <inlineHelpText>Total Number of Post Closing Items that require a Revision</inlineHelpText>
    <label># of Items Requiring Revision</label>
    <summarizedField>Post_Closing_Section__c.Num_of_Items_Requiring_Revision__c</summarizedField>
    <summaryForeignKey>Post_Closing_Section__c.Post_Closing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>