force-app/main/default/objects/Post_Closing__c/fields/Perc_of_Items_Requiring_Revision__c.field-meta.xml
<CustomField>
    <fullName>Perc_of_Items_Requiring_Revision__c</fullName>
    <formula>Num_of_Items_Requiring_Revision__c / Num_of_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Items Requiring Revision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>