force-app/main/default/objects/Post_Closing__c/fields/Percent_of_Items_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Items_Completed__c</fullName>
    <formula>Num_of_Items_Completed__c / Num_of_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Items Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>