force-app/main/default/objects/Post_Closing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Num_of_Items__c</columns>
    <columns>Num_of_Items_Completed__c</columns>
    <columns>Percent_of_Items_Completed__c</columns>
    <columns>Num_of_Item_Requiring_Follow_Up__c</columns>
    <columns>Perc_of_Items_Requiring_Follow_Up__c</columns>
    <columns>Num_of_Items_Requiring_Revision__c</columns>
    <columns>Perc_of_Items_Requiring_Revision__c</columns>
    <columns>Deal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>